# code-prm

./: .env.example  .gitignore  .gitmodules  README.md  environment.yml  pyproject.toml
docs/: STATUS-2026-05-29.md  STATUS-2026-05-30.md  STATUS.md  phase1-report.md
docs/blog/: 01-foundations.html  02-process-reward.html  03-code-agents.html  04-this-project.html  05-ml-toolkit.html  06-depth.html  app.js  index.html  style.css
scripts/: 00_setup_lab_box.sh  01_setup_pi.sh  05_collect_pilot.sh  06_label_pilot.sh  07_label_pilot_judge.sh  08_audit_pilot.py  09_audit_labeled_pilot.py  10_collect_trajectories.sh  11_collect_bigcodebench.sh  12_report_phase1_quality.py  13_backfill_bigcodebench_missing.py  20_label_mc.sh  20_label_steps.sh  21_resume_label_file.py  30_assemble_dataset.py
src/collector/: trajectory_logger.ts  ts_logger_spec.md
src/eval/: collect_batch.py  swebench_runner.py
src/labeler/: anthropic_client.py  label_all.py  mc_labeler.py  step_labeler.py  trajectory_schema.py
src/utils/: cost_aggregator.py  cost_tracker.py  jsonl_io.py
tests/: test_anthropic_client.py  test_assemble_dataset.py  test_assemble_task_split.py  test_audit_labeled_pilot.py  test_audit_pilot.py  test_backfill_bigcodebench_missing.py  test_bigcodebench_grader_harness.py  test_collect_batch.py  test_cost_aggregator.py  test_cost_tracker.py  test_label_all_guards.py  test_mc_labeler.py  test_phase1_quality_report.py  test_resume_label_file.py  test_step_labeler.py  test_swebench_runner.py  test_trajectory_schema.py
tests/fixtures/: synthetic_trajectory.json
(+2 files in other folders)
