[project]
name = "code-prm"
version = "0.1.0"
description = "Process Reward Model for Code Agent Trajectories"
requires-python = ">=3.11,<3.12"
dependencies = [
    "torch>=2.4,<2.6",
    "transformers>=4.45,<4.50",
    "peft>=0.13",
    "accelerate>=1.0",
    "anthropic>=0.39",
    "pydantic>=2.9",
    "datasets>=3.0",
    "pytest>=8.0",
    "tqdm>=4.66",
    "tenacity>=9.0",
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = ["ruff>=0.7", "mypy>=1.13", "ipython>=8.0"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
